--- a/styles/main.css
+++ b/styles/main.css
@@ -2,23 +2,102 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-weight:normal;;
-    transition:.3s ease-in-out;
+    font-family: Arial, sans-serif;
+    font-weight:normal;
+    cursor: url("/images/wiicursorremake.png"), default;
+    scroll-behavior: smooth;
+    
 }
-
+.page {
+    background-color:#FFFF;
+    color:#323232;
+    transition:.2s ease-in-out;
+}
 body {
     margin-top:8px;
-    background: url("/images/background/wiishopbackground.png") top center repeat-y #000444;
-    background-size: 100%;
-    background-color: #FFFF;
-    font-family: Arial, sans-serif;
     overflow-x: hidden; 
     overflow-y:auto;
-    color:white;
     transition:.3s ease-in-out;
     animation: godown .5s;
     opacity:100%;
+
 }
+#borderleft {
+    position:absolute; top:0px; left:1.3%; z-index:-3px; width:13px; height:100%;
+}
+#borderright {
+    position:absolute; top:0px; right:1.3%; z-index:-3px; width:13px; height:100%;
+}
+
+#loadicon {
+    width:90px;
+    height:90px;
+    position:absolute;
+    top:0%;
+    left:0%;
+    overflow:hidden;
+    z-index:7;
+}
+
+  
+#wiiring {
+    animation: spinner 1.3s infinite ;
+    transition:.3s ease-in-out;
+    filter: drop-shadow(3px 3px 4px rgba(0, 0, 0, 0.11));
+}
+@keyframes spinner {
+    0% {transform: rotate(-150deg)}
+    100% {transform: rotate(150deg)};
+}
+
+
+/* mobile */
+
+@media only screen and (min-width:600px) {
+    #borderleft {
+        position:absolute; top:0px; left:1.3%; z-index:-3px; width:13px; height:100%;
+    }
+    #borderright {
+        position:absolute; top:0px; right:1.3%; z-index:-3px; width:13px; height:100%;
+    }
+    #loadicon {
+        left:2%;
+    }
+  }
+  
+  
+  /* computers */
+
+  @media only screen and (min-width: 1070px) {
+    #borderleft {
+        position:absolute; top:0px; left: 5.5em; z-index:-3px; width:13px; height:100%;
+    }
+    #loadicon {
+        left:0%;
+    }
+    #borderright {
+        position:absolute; top:0px; right: 5.5em; z-index:-3px; width:13px; height:100%;
+    }
+  }
+
+
+
+a {
+    color:#10799c;
+    cursor: url("/images/wiicursorremake_hover.png"), pointer;
+}
+a:hover {
+    color:#12a3d3;
+    cursor: url("/images/wiicursorremake_hover.png"), pointer;
+}
+button:hover {
+    cursor: url("/images/wiicursorremake_hover.png"), pointer;
+}
+hr {
+    border: 1px solid #838383;
+}
+
+
 
 @keyframes godown {
     0% {margin-top:50px; opacity:0%;};
@@ -27,85 +106,19 @@ body {
     margin:auto;
     width:90%;
     max-width:900px;
+    background-color:inherit;
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.123);
     border-left:1px solid #34beed;
     border-top:1px solid #34beed;
     border-right:2px solid #34beed;
     border-bottom:2px solid #34beed;
-
     border-radius:3px;
-    color:black;
+    color:inherit;
     padding:10px; 
     text-align: center;
+    z-index:5;
+    position:relative; 
 }
-
-#loadicon {
-    width:90px;
-    height:90px;
-    position:absolute;
-    left:80px;
-    top:1px;
-    overflow:hidden;
-}
-
-  
-#wiiring {
-    animation: spinner 1.3s infinite ;
-    transition:.3s ease-in-out;
-}
-@keyframes spinner {
-    0% {transform: rotate(-150deg)}
-    100% {transform: rotate(150deg)};
-}
-
-/* moves the loader if the blue graid borders are visible fully or not */
-
-@media only screen and (min-width:600px) {
-    #loadicon {
-        width:90px;
-        height:90px;
-        position:absolute;
-        left:6px;
-        top:1px;
-        overflow:hidden;
-    }
-  }
-  
-  @media only screen and (max-width: 1024px) {
-    #loadicon {
-        width:90px;
-        height:90px;
-        position:absolute;
-        left:6px;
-        top:1px;
-        overflow:hidden;
-    }
-  }
-  
-  
-  @media only screen and (min-width: 1024px) {
-    #loadicon {
-        width:90px;
-        height:90px;
-        position:absolute;
-        left:80px;
-        top:1px;
-        overflow:hidden;
-    }
-  }
-  
-  @media only screen and (min-width: 900px) {
-    #loadicon {
-        width:90px;
-        height:90px;
-        position:absolute;
-        left:80px;
-        top:1px;
-        overflow:hidden;
-    }
-  }
-
-/* moves the loader if the blue graid borders are visible fully or not */
 
 
 
