--- a/wiishopscrollbar/wiiscrollbar.css
+++ b/wiishopscrollbar/wiiscrollbar.css
@@ -4,7 +4,7 @@
      */
 
      ::-webkit-scrollbar {
-      width: 49px; 
+      width: 50px; 
     }
     
     ::-webkit-scrollbar-track {
@@ -12,19 +12,19 @@
     }
     
     ::-webkit-scrollbar-thumb {
-      background: rgb(240,255,255);
-      background: linear-gradient(180deg, rgba(240,255,255,1) 0%, rgba(241,255,255,1) 3%, rgba(241,255,255,1) 6%, rgba(247,255,255,1) 11%, rgba(247,255,255,1) 15%, rgba(244,255,255,1) 21%, rgba(241,254,254,1) 29%, rgba(241,254,254,1) 36%, rgba(239,255,254,1) 42%, rgba(239,255,254,1) 45%, rgba(241,254,254,1) 52%, rgba(241,254,254,1) 58%, rgba(241,255,255,1) 63%, rgba(234,255,255,1) 73%, rgba(234,255,255,1) 79%, rgba(233,255,252,1) 89%, rgba(233,255,252,1) 100%);
+      border-left:1px solid #34BEED;
+      border-right:1px solid #34BEED;
+      background: rgb(198,238,255);
+      background: linear-gradient(0deg, rgba(198,238,255,1) 0%, rgba(226,248,255,1) 8%, rgba(224,245,255,1) 27%, rgba(233,246,252,1) 54%, rgba(232,246,249,1) 100%);
     }
-    
+
     
     
     /* Buttons */
     ::-webkit-scrollbar-button:single-button {
     background-image: url("/wiishopscrollbar/arrows/arrowup.png");
-    border-top:0px  transparent;
-    border-bottom:0px  transparent;
+    border:0px;
     border-left:1px solid #34BEED;
-    border-right:1px solid #34BEED;
     display: block;
     border-style: solid;
     height: 52px;
@@ -45,10 +45,8 @@
     /* Down */
     ::-webkit-scrollbar-button:single-button:vertical:increment {
     background-image: url("/wiishopscrollbar/arrows/arrowdown.png");
-    border-top:0px  transparent;
-    border-bottom:0px  transparent;
+    border:0px;
     border-left:1px solid #34BEED;
-    border-right:1px solid #34BEED;
     display: block;
     border-style: solid;
     height: 52px;
