--- a/styles/main.css
+++ b/styles/main.css
@@ -32,7 +32,7 @@ body {
 #loadicon {
     width:90px;
     height:90px;
-    position:absolute;
+    position:fixed;
     top:0%;
     left:0%;
     overflow:hidden;
