--- a/styles/globe.css
+++ b/styles/globe.css
@@ -2,114 +2,131 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Arial, sans-serif;
     font-weight:normal;
     cursor: url("/images/wiicursorremake.png"), default;
     scroll-behavior: smooth;
-    
+    transition:0s;  
+    font-family: 'Wii NTLG PGothic JPN Regular';
 }
-body {
-    margin-top:8px;
-    overflow-x: hidden; 
-    overflow-y:auto;
-    transition:.3s ease-in-out;
-    animation: godown .5s;
-    opacity:100%;
-
-}
-#borderleft {
-    position:absolute; top:0px; left:1.3%; z-index:-3px; width:13px; height:100%;
-}
-#borderright {
-    position:absolute; top:0px; right:1.3%; z-index:-3px; width:13px; height:100%;
-}
-
-#loadicon {
-    width:90px;
-    height:90px;
-    position:fixed;
-    top:0%;
-    left:0%;
-    overflow:hidden;
-    z-index:7;
-}
-
-  
-#wiiring {
-    animation: spinner 1.3s infinite ;
-    transition:.3s ease-in-out;
-    filter: drop-shadow(3px 3px 4px rgba(0, 0, 0, 0.11));
-}
-@keyframes spinner {
-    0% {transform: rotate(-150deg)}
-    100% {transform: rotate(150deg)};
-}
-
-
-/* mobile */
-
-@media only screen and (min-width:600px) {
-    #borderleft {
-        position:absolute; top:0px; left:1.3%; z-index:-3px; width:13px; height:100%;
-    }
-    #borderright {
-        position:absolute; top:0px; right:1.3%; z-index:-3px; width:13px; height:100%;
-    }
-    #loadicon {
-        left:2%;
-    }
+@font-face {
+    font-family: 'Wii NTLG PGothic JPN Regular';
+    src: url(/font/font2.ttf);
   }
   
+          body {
+              background-color:black;
+              color:white;
+              width:100%;
+              height:100%;
+              overflow:hidden;
+          }
+          #mainpg {
+            background-color:black;
+            color:#323232;
+
+        }
+        #details {
+            margin:auto;
+            width:90%;
+            max-width:900px;
+            background-color:inherit;
+            color:inherit;
+            box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.123);
+            border-radius:3px;
+            color:inherit;
+            padding:10px; 
+            text-align: center;
+            z-index:5;
+        }
+        
+            
+          #details {
+              background-color:black;
+              color:white;
+              background-image:url("/images/globe/stars.png");
+              background-size:auto;
+              transition:.3s ease-in-out;
+              overflow:hidden;
+          }
+          #globe:active {
+              cursor: url("/images/wiicursorremake_grab.png"), auto;
+          }
+          #globe {
+              user-drag: none;
+      -webkit-user-drag: none;
+      user-select: none;
+      -moz-user-select: none;
+      -webkit-user-select: none;
+      -ms-user-select: none;
+      transition:.3s ease-in-out;
+          }
   
-  /* computers */
+          button {
+             background-image:url("/images/globe/border.PNG");
+             background-size:contain;
+             background-repeat:repeat-x;
+           width:20%;
+          height:60px;
+          padding:3px;
+          border-radius:3px;
+          border:none;
+          font-size:23px;
+      background-color:transparent;
+          color:#323232;
+          font-weight:bold;
+          opacity:30%;
+          transition:.1s ease-in-out;
+          display:inline-block;
+          background-color:#e8e8e8;
+          }
+          button:hover {
+             background-image:url("/images/globe/border_active.png");
+             transition:.1s ease-in-out;
+          opacity:58%;
+          background-color:#26b8e8;
+          color:white;
+          }
+          button:active {
+             background-image:url("/images/globe/border_press.png"); 
+             transition:.1s ease-in-out;
+             opacity:70%;
+             height:60px;
+             background-color:#26b8e8;
+             color:white;
+          }
+          .active {
+             background-image:url("/images/globe/border_press.png"); 
+             transition:.1s ease-in-out;
+             opacity:70%;
+             height:60px;
+             background-color:#26b8e8;
+             color:white;
+          }
+          .topbtns {
+              width:30%;
+              padding:0px;
+          }
+          #globe {
+              width:577px; height:45%; border-radius:950px; display:block;max-width:60%; margin:auto; position:absolute; left:20%; right:20%; bottom:50%; top:50%; z-index:1;
+          }
+          #NASAANDWNWATERMARK {
+              position:absolute; left:8%; bottom:120px; width:230; height:auto; z-index:2;
+          }
+          #controlsmenu {
+              position:absolute; left:0%; top:0; z-index:10; 
+              background-repeat:no-repeat;
+              background-position:center;
+              width:100%; height:100%;
+              background-color:#1010374b;
+              transition:.3s ease-in-out;
+              color:white;
+              font-size:19px;
+              text-align:center;
+               display: flex;
+               align-items: center; 
+               justify-content: center; 
+               list-style-type: none;
+          }
+  
 
-  @media only screen and (min-width: 1070px) {
-    #borderleft {
-        position:absolute; top:0px; left: 5.5em; z-index:-3px; width:13px; height:100%;
-    }
-    #loadicon {
-        left:0%;
-    }
-    #borderright {
-        position:absolute; top:0px; right: 5.5em; z-index:-3px; width:13px; height:100%;
-    }
-  }
-
-
-
-a {
-    color:#10799c;
-    cursor: url("/images/wiicursorremake_hover.png"), pointer;
-}
-a:hover {
-    color:#12a3d3;
-    cursor: url("/images/wiicursorremake_hover.png"), pointer;
-}
-hr {
-    border: 1px solid #838383;
-}
-
-
-
-@keyframes godown {
-    0% {margin-top:50px; opacity:0%;};
-}
-#details {
-    margin:auto;
-    width:90%;
-    max-width:900px;
-    background-color:inherit;
-    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.123);
-    border-left:0.01em solid #00277a;
-    border-top:0.01em solid #00277a;
-    border-right:0.01em solid #00277a;
-    border-bottom:0.01em solid #00277a;
-    border-radius:3px;
-    color:inherit;
-    padding:10px; 
-    text-align: center;
-    z-index:5;
-    position:relative; 
-}
-
-
+          
