--- a/styles/main.css
+++ b/styles/main.css
@@ -33,6 +33,47 @@ body {
     background-color:white;
     color:#323232;
 }
+
+a {
+    color:#10799c;
+    cursor: url("/images/wiicursorremake_hover.png"), auto;
+    text-decoration:none;
+}
+a:hover {
+    color:#12a3d3;
+    cursor: url("/images/wiicursorremake_hover.png"), pointer;
+    
+    text-decoration:underline;
+}
+hr {
+    border: 1px solid #838383;
+}
+
+
+
+@keyframes godown {
+    0% {margin-top:50px; opacity:0%;};
+}
+#details {
+    margin:auto;
+    width:90%;
+    max-width:900px;
+    background-color:rgba(255, 255, 255, 0.151);
+    color:inherit;
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.123);
+    border-left:1px solid #34beed;
+    border-top:1px solid #34beed;
+    border-right:2px solid #34beed;
+    border-bottom:2px solid #34beed;
+    border-radius:3px;
+    color:inherit;
+    padding:10px; 
+    text-align: center;
+    z-index:5;
+    position:relative; 
+}
+
+
 #borderleft {
     position:absolute; top:0px; left:1.3%; z-index:-3px; width:13px; height:100%;
 }
@@ -93,84 +134,53 @@ body {
 
 
 
-a {
-    color:#10799c;
-    cursor: url("/images/wiicursorremake_hover.png"), pointer;
-    text-decoration:none;
-}
-a:hover {
-    color:#12a3d3;
-    cursor: url("/images/wiicursorremake_hover.png"), pointer;
-    
-    text-decoration:underline;
-}
-hr {
-    border: 1px solid #838383;
-}
-
-
-
-@keyframes godown {
-    0% {margin-top:50px; opacity:0%;};
-}
-#details {
-    margin:auto;
-    width:90%;
-    max-width:900px;
-    background-color:inherit;
-    color:inherit;
-    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.123);
-    border-left:1px solid #34beed;
-    border-top:1px solid #34beed;
-    border-right:2px solid #34beed;
-    border-bottom:2px solid #34beed;
-    border-radius:3px;
-    color:inherit;
-    padding:10px; 
-    text-align: center;
-    z-index:5;
-    position:relative; 
-}
-
 
 
 /* other styles */
-button {
-    cursor: url("/images/wiicursorremake.png"), default;
-    background-color:#f6fdff;
-    outline:.1em solid #34beed;
-    border:none;
-    border-radius:6px;
-    padding:3px;
-    text-align:Center;
-    filter: drop-shadow(1px 1px 3.4px #c5c5c5);
-    box-shadow:inset 1px 1px 13px #74747427;
-	font-size: 18px;
-	color: #323232;
-	font-weight: normal;
-    overflow:hidden;
-    width:auto;
-    z-index:1;
- }
-button:hover {
-    cursor: url("/images/wiicursorremake_hover.png"), pointer;
-    background-color:#f6fdff;
-    outline:.2em solid #21bdf1; 
-    border:none;
-    border-radius:6px;
-    padding:3px;
-    text-align:Center;
-    filter: drop-shadow(1px 1px 3.4px #c5c5c5);
-    box-shadow:inset 1px 1px 13px #74747427;
-	font-size: 18px;
-	color: #323232;
-	font-weight: normal;
-    overflow:hidden;
-    width:auto;
-    z-index:1;
-    }
 
+/* wii shop type button made by ChrisplayzYT/BLOX.
+ smalltext,mediumtext,largetext, were made by me peeking at the wii shop css,
+  its just font sizes!1!1 i didnt steal!!! 
+ */
+ button {
+    /* change to your own cursor, or just remove :) */
+    cursor: url("/images/wiicursorremake.png"), default;
+    text-align: center;
+    padding: 3px 5px;
+  transition:0s;
+  /* don te edit cuz this make the buttons w i i s h o p p y */
+    border-radius: 5px;
+    border: 1.3px solid #34beed;
+    background-color:#f6fdff;
+    filter: drop-shadow(1px 1px 3.4px #c5c5c5);
+    box-shadow:inset 1px 1px 12px #54545415;
+    font-size:18px;
+  }
   
+  button:hover {
+        /* change to your own cursor when hovering over sum, or just remove :) */
+    cursor: url("/images/wiicursorremake_hover.png"), pointer;
+    transition:0s;
+  /* don te edit cuz this make the buttons w i i s h o p p y */
+    border:2px solid #34beed;
+    outline:1.5px solid #34bEED;
+  }
+  /*forthese, add class="BTN___text" to your button */
+  .BTNsmalltext {
+    font-size: 14px;
+  }
+  .BTNmediumtext {
+    font-weight:normal;
+    font-size: 18px;
+  }
+  .BTNlargetext {
+    font-weight:normal;
+    font-size: 22px;
+  }
+  /* wii shop type button made by ChrisplayzYT/BLOX.
+  smalltext,mediumtext,largetext, were made by me peeking at the wii shop css,
+  its just font sizes!1!1 i didnt steal!!! 
+  */
 
     
 
@@ -196,11 +206,12 @@ button:hover {
 #earlywebbutton {
     text-decoration:none;
     color:transparent;
-    width:95px;
-    height:35px;
+    width:88px;
+    height:31px;
     display:inline-block;
     border:1px solid #34BEED;
     border-radius:3px;    box-shadow: 2px 2px 0px rgba(0, 0, 0, 0.247);
+    cursor: url("/images/wiicursorremake_hover.png"), pointer;
 }
 #earlywebbutton a {
     text-decoration:none;
