--- a/styles/globe.css
+++ b/styles/globe.css
@@ -9,9 +9,11 @@
     font-family: 'Wii NTLG PGothic JPN Regular';
 }
 @font-face {
-    font-family: 'Wii NTLG PGothic JPN Regular';
-    src: url(/font/font2.ttf);
-  }
+  font-family: 'Wii NTLG PGothic JPN Regular';
+    /* wii shop font from: https://github.com/amarillonmc/MSE201_w_ygos10/blob/master/font/ZENTemplate/FOT-Rodin%20Pro%20M.ttf */
+    /* the closest font to wii shops font in google fonts is Noto Sans JP */
+  src: url(/font/FOT-Rodin\ Pro\ M.ttf);
+}
   
           body {
               background-color:black;
