--- a/styles/main.css
+++ b/styles/main.css
@@ -228,3 +228,8 @@
     cursor: url("/images/wiicursorremake_hover.png"), pointer;
   }
   /* credit to idkwhereisthisname for the early web buttons idea ''https://idkwh.ct8.pl'' */
+
+#noticc {
+    /* notice abt website updates */
+    background-color:#34BEED; color:#FFF; font-weight:bold; font-size:18px; text-align:center; width:100%; height:40px; padding-bottom:30px; display:block; position:relative; top:0; left:0; z-index:99999;
+}
